--- a/MyApplication3/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication3/app/src/main/res/layout/activity_main.xml
@@ -47,4 +47,12 @@
         android:inputType="textEmailAddress"
         tools:layout_editor_absoluteX="103dp"
         tools:layout_editor_absoluteY="201dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="171dp"
+        tools:layout_editor_absoluteY="42dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
