--- a/MyApplication3/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication3/app/src/main/res/layout/activity_main.xml
@@ -48,4 +48,12 @@
         tools:layout_editor_absoluteX="103dp"
         tools:layout_editor_absoluteY="201dp" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Регистрация"
+        tools:layout_editor_absoluteX="138dp"
+        tools:layout_editor_absoluteY="592dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
